[package]
name = "lsmdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "1.2.3"
crc32fast = "1.2.1"
crossbeam-utils = "0.8.5"
crossbeam-channel = "0.5.1"
snap = "1.0.5"
rand = "0.8.4"
bytes = "1.0.1"
log = "0.4.14"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
fxhash = "0.2.1"